--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,5 @@
+@import url("hover.css");
+
 html,
 body {
   padding: 0;
@@ -5,7 +7,6 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-@import url("hover.css");
 
 a {
   color: inherit;
@@ -18,4 +19,33 @@ a {
 
 @media (prefers-color-scheme: dark) {
 
+}
+
+@media (prefers-color-scheme: light) {
+
+}
+
+.shadow {
+  box-shadow: 0px 1px 2px 0px #111;
+}
+
+.shadow-2 {
+  box-shadow: 0px 1px 2px 0px darkgrey;
+}
+
+.overlay {
+  border-radius: 20px;
+  position: absolute;
+  bottom: 0;
+  z-index: 1000;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #008CBA;
+}
+
+.container-overlay:hover .overlay {
+  opacity: 1;
 }
